force-app/main/default/objects/OrderNonCompliance__c/OrderNonCompliance__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de définir les non conformités d&apos;une commande client</description>
    <label>Non-conformité commande</label>
    <nameField>
        <label>Motif</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-conformités commande</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>