force-app/main/default/objects/OrderNonCompliance__c/fields/age__c.field-meta.xml
<CustomField>
    <fullName>age__c</fullName>
    <formula>TODAY() - startDate__c</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>