force-app/main/default/objects/OrderNonCompliance__c/fields/ageInWeeks__c.field-meta.xml
<CustomField>
    <fullName>ageInWeeks__c</fullName>
    <formula>FLOOR((TODAY() - startDate__c) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (en sem.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>