force-app/main/default/objects/OrderNonCompliance__c/fields/cancellationDate__c.field-meta.xml
<CustomField>
    <fullName>cancellationDate__c</fullName>
    <label>Date d&apos;annulation</label>
    <type>Date</type>
</CustomField>