force-app/main/default/objects/OrderNonCompliance__c/fields/cancellingReasonId__c.field-meta.xml
<CustomField>
    <fullName>cancellingReasonId__c</fullName>
    <formula>type__r.cancellingReason__c</formula>
    <label>[#] Id du motif d&apos;annulation</label>
    <type>Text</type>
</CustomField>