force-app/main/default/objects/OrderNonCompliance__c/fields/closeDate__c.field-meta.xml
<CustomField>
    <fullName>closeDate__c</fullName>
    <description>Date de clôture de la tâche de non conformité (Date de résolution)</description>
    <label>Date de fermeture</label>
    <type>Date</type>
</CustomField>