force-app/main/default/objects/OrderNonCompliance__c/fields/criticity__c.field-meta.xml
<CustomField>
    <fullName>criticity__c</fullName>
    <defaultValue>&apos;Forte&apos;</defaultValue>
    <description>Niveau d&apos;importance de la non conformité</description>
    <inlineHelpText>Niveau d&apos;importance de la non conformité</inlineHelpText>
    <label>Criticité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Criticity</valueSetName>
    </valueSet>
</CustomField>