force-app/main/default/objects/OrderNonCompliance__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <label>Commande client</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Non-conformités commande</relationshipLabel>
    <relationshipName>OrderNonCompliances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>