force-app/main/default/objects/OrderNonCompliance__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>Description de la tâche de non conformité</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>