force-app/main/default/objects/OrderNonCompliance__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <formula>IF (!ISNULL(startDate__c) &amp;&amp; !ISNULL(closeDate__c), closeDate__c - startDate__c, null)</formula>
    <label>Durée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>