force-app/main/default/objects/OrderNonCompliance__c/fields/expirationAction__c.field-meta.xml
<CustomField>
    <fullName>expirationAction__c</fullName>
    <description>Action produite sur la commande suite à l&apos;expiration de la tâche de non conformité</description>
    <inlineHelpText>Action effectuée sur le contrat à l&apos;expiration du délai</inlineHelpText>
    <label>Action d&apos;expiration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpirationAction</valueSetName>
    </valueSet>
</CustomField>