force-app/main/default/objects/OrderNonCompliance__c/fields/expirationDate__c.field-meta.xml
<CustomField>
    <fullName>expirationDate__c</fullName>
    <description>Date d&apos;expiration de la tâche entraînant un blocage du contrat si pas respecté</description>
    <inlineHelpText>Date d&apos;expiration de la tâche entraînant l&apos;action d&apos;expiration si pas respectée</inlineHelpText>
    <label>Date d&apos;expiration</label>
    <type>Date</type>
</CustomField>