force-app/main/default/objects/OrderNonCompliance__c/fields/immediateAction__c.field-meta.xml
<CustomField>
    <fullName>immediateAction__c</fullName>
    <description>Action produite sur la commande suite à la création de la tâche de non conformité</description>
    <inlineHelpText>Action effectuée sur la commande à la création</inlineHelpText>
    <label>Action immédiate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpirationAction</valueSetName>
    </valueSet>
</CustomField>