force-app/main/default/objects/OrderNonCompliance__c/fields/isCancellingDateEqualOrder__c.field-meta.xml
<CustomField>
    <fullName>isCancellingDateEqualOrder__c</fullName>
    <formula>if(cancellationDate__c == customerOrder__r.cancellingDate__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;annulation égal à la commande</label>
    <type>Checkbox</type>
</CustomField>