force-app/main/default/objects/OrderNonCompliance__c/fields/isWaitingForCustomer__c.field-meta.xml
<CustomField>
    <fullName>isWaitingForCustomer__c</fullName>
    <description>NCC en attente d&apos;informations client.
Utilisé pour les notifications Marketing Cloud</description>
    <formula>type__r.isWaitingForCustomer__c</formula>
    <label>[#] En attente infos client</label>
    <type>Checkbox</type>
</CustomField>