force-app/main/default/objects/OrderNonCompliance__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <description>Champ contenant les documents attendu
Utilisé pour les notifications Marketing Cloud</description>
    <label>[#] Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>