force-app/main/default/objects/OrderNonCompliance__c/fields/notControlableDuration__c.field-meta.xml
<CustomField>
    <fullName>notControlableDuration__c</fullName>
    <formula>IF(closeDate__c &lt;=  customerOrder__r.controlDateForm__c,duration__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Durée non-métrable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>