force-app/main/default/objects/OrderNonCompliance__c/fields/notOrderableDuration__c.field-meta.xml
<CustomField>
    <fullName>notOrderableDuration__c</fullName>
    <formula>IF(closeDate__c &gt; customerOrder__r.controlDateForm__c &amp;&amp; closeDate__c &lt;= customerOrder__r.transmissionDate__c,duration__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Durée non-commandable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>