force-app/main/default/objects/OrderNonCompliance__c/fields/orderNonComplianceType__c.field-meta.xml
<CustomField>
    <fullName>orderNonComplianceType__c</fullName>
    <description>Type de la NCC
Utilisé pour les notifications Marketing Cloud</description>
    <formula>TEXT(type__r.orderNonComplianceType__c)</formula>
    <label>[#] Type de non-conformité</label>
    <type>Text</type>
</CustomField>