force-app/main/default/objects/OrderNonCompliance__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date d&apos;ouverture de la tâche de non conformité</description>
    <label>Date d’ouverture</label>
    <required>true</required>
    <type>Date</type>
</CustomField>