force-app/main/default/objects/OrderNonCompliance__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
                <default>true</default>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Expiré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>