force-app/main/default/objects/OrderNonCompliance__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre!</errorMessage>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>OrderNonComplianceType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Non-conformités commande</relationshipLabel>
    <relationshipName>OrderNonCompliances</relationshipName>
    <type>Lookup</type>
</CustomField>