force-app/main/default/objects/OrderNonCompliance__c/recordTypes/Impossibility.recordType-meta.xml
<RecordType>
    <fullName>Impossibility</fullName>
    <active>true</active>
    <description>Impossibilité technique, fonctionnelle ou administrative empêchant l&apos;avancement de la commande client (anciennement non-able)</description>
    <label>Impossibilité</label>
</RecordType>