force-app/main/default/objects/OrderNonCompliance__c/recordTypes/Indispensable.recordType-meta.xml
<RecordType>
    <fullName>Indispensable</fullName>
    <active>true</active>
    <description>Non respect d&apos;une règle interne d&apos;enregistrement des commandes (règle critique), règle empêchant d&apos;accepter la commande dans son état actuel et devant aboutir à son annulation en cas de non résolution.</description>
    <label>Incontournable</label>
</RecordType>