force-app/main/default/objects/OrderNonCompliance__c/recordTypes/Instance.recordType-meta.xml
<RecordType>
    <fullName>Instance</fullName>
    <active>true</active>
    <description>Non respect d&apos;une règle interne d&apos;enregistrement des commandes, règle n&apos;empêchant pas l&apos;avancement de la commande dans l&apos;immédiat, mais pouvant à terme aboutir à son annulation en cas de non résolution.</description>
    <label>Instance en cours</label>
</RecordType>