force-app/main/default/objects/OrderNonCompliance__c/validationRules/VR_K3_ONC_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ONC_Action</fullName>
    <active>false</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
ISPICKVAL(immediateAction__c, &apos;&apos;) &amp;&amp;
ISPICKVAL(expirationAction__c, &apos;&apos;) &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>immediateAction__c</errorDisplayField>
    <errorMessage>Au moins une action doit être définie!</errorMessage>
</ValidationRule>