force-app/main/default/objects/OrderNonCompliance__c/validationRules/VR_K3_ONC_CancellingDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ONC_CancellingDate</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
OR(cancellationDate__c &lt; startDate__c,
   cancellationDate__c &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>cancellationDate__c</errorDisplayField>
    <errorMessage>Date d&apos;annulation invalide (doit être comprise entre la date d&apos;ouverture et la date du jour)!</errorMessage>
</ValidationRule>