force-app/main/default/objects/OrderNonCompliance__c/validationRules/VR_K3_ONC_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ONC_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
startDate__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>startDate__c</errorDisplayField>
    <errorMessage>Date d&apos;ouverture invalide (doit être antérieure à la date du jour)!</errorMessage>
</ValidationRule>