force-app/main/default/objects/OrderNonCompliance__c/listViews/NCC_presque_expir.listView-meta.xml
<ListView>
    <fullName>NCC_presque_expir</fullName>
    <columns>customerOrder__c</columns>
    <columns>status__c</columns>
    <columns>age__c</columns>
    <columns>orderNonComplianceType__c</columns>
    <columns>startDate__c</columns>
    <columns>expirationDate__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>En cours,Expiré</value>
    </filters>
    <filters>
        <field>expirationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>NCC avec date d&apos;expiration</label>
</ListView>